--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Emmanuel/eclipse-workspace/mfz-rxtx-2.2-20081207-win-x64/RXTXcomm.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX12"/>
+	<classpathentry kind="lib" path="C:/Users/Emmanuel/eclipse-workspace/jSerialComm-v2.5.1-3/jSerialComm-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
